--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-cycler>=0.10.0
-decorator>=4.0.10
-numpy>=1.11.2
-six>=1.10.0
-python-dateutil>=2.6.0
-paramz>=0.7.0
-GPy>=1.8
-matplotlib>=1.5.3, <=3.1.3
+cycler==0.11.0
+decorator==5.1.0
+numpy==1.21.3
+six==1.16.0
+python-dateutil==2.8.2
+paramz>=0.10.0
+GPy==1.10.0
+matplotlib==3.1.3
 #pyparsing==2.1.10
 #pytz==2016.7
-scipy>=0.18.1, <=1.4.1
-mock>=2.0.0
-PyDOE >= 0.3.0
-sobol_seq >=0.1
+scipy==1.4.1
+mock==4.0.3
+PyDOE==0.3.8
+sobol_seq==0.2.0
 emcee==2.2.1
-pandas>=1.0.5
-seaborn>=0.10.1
-python-ternary>=1.0.7
-
+pandas==1.3.4
+seaborn==0.11.2
+python-ternary==1.0.8
+spyder==5.2.2
 
 # For tests
 nose
