--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ decorator==5.1.0
 numpy==1.21.3
 six==1.16.0
 python-dateutil==2.8.2
-paramz>=0.10.0
+paramz>=0.9.5#>=0.10.0
 GPy==1.10.0
 matplotlib==3.1.3
 #pyparsing==2.1.10
